@@ -1,4 +1,10 @@
-﻿shmuel 20.10.2016 19:36:54 +0200 - build 590
+﻿shmuel 22.10.2016 19:36:48 +0200 - build 591
+
+1. M#3303: far.Menu: клавиши для BreakKeys
+   LuaFAR: наряду с "виртуальными" именами ключей, far.Menu теперь понимает и обозначения BreakKey
+           именами, принятыми в Far-макросах.
+
+shmuel 20.10.2016 19:36:54 +0200 - build 590
 
 1. M#3275: Allow plugins to load and edit unsaved macro
    Макробраузер при нажатии F4/AltF4 на несохранённом клавиатурном макросе вызывает фаровский диалог "Macro settings".
